# sentinel-vault

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  d0f80fb1be0c_add_account_lockout.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: audit.py  auth.py  health.py  keys.py  roles.py  router.py  secrets.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py
backend/app/models/: __init__.py  audit_log.py  category.py  key.py  refresh_token.py  role.py  secret.py  user.py
backend/app/schemas/: audit.py  auth.py  keys.py  rbac.py  secrets.py
backend/app/security/: crypto.py  hashing.py  limiter.py  middleware.py  passwords.py  tokens.py
backend/app/services/: audit.py  auth.py  key_management.py  rbac.py  secrets.py
backend/tests/: test_alembic.py  test_audit.py  test_auth_routes.py  test_auth_schemas.py  test_auth_security.py  test_config.py  test_crypto.py  test_health.py  test_key_management.py  test_models.py  test_rate_limiter.py  test_rbac.py  test_secrets.py  test_security_headers.py
docs/api/: api-list.md
docs/architecture/: README.md  authentication-system.md  backend-foundation.md  cryptography.md  database-engineering.md  database-schema.md  folder-structure.md  system-architecture.md
docs/threat-model/: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
(+20 files in other folders)
