[project]
name = "sentinel-vault-backend"
version = "0.1.0"
description = "FastAPI backend for Sentinel Vault"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "passlib[argon2]>=1.7.4",
  "PyJWT>=2.8.0",
  "pydantic[email]>=2.9.2",
  "pydantic-settings>=2.6.1",
  "cryptography>=43.0.3",
  "slowapi>=0.1.9",
  "zxcvbn>=4.4.28"
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
